[FIX] web_responsive: Menu section overflow

--- a/web_responsive/static/src/css/web_responsive.scss
+++ b/web_responsive/static/src/css/web_responsive.scss
@@ -69,6 +69,7 @@ $chatter_zone_width: 35%;
         .o_menu_sections.show {
             @include full-screen-dropdown();
             background-color: $dropdown-bg;
+            overflow: auto;
 
             .show {
                 display: flex;
